--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <head>
     <meta charset = 'utf-8'>
-    <title> Design + Tech. | Anjali Chary </title>
+    <title> Writing + Code. | Mustafa Abubaker </title>
     <link rel = "stylesheet" href = "portfolio.css">
     <link rel="shortcut icon" type="image/x-icon" href="logo.png"/>
  </head>
- <h1> <a href = "index.html">ANJALI CHARY</a></h1>
+ <h1> <a href = "index.html">Mustafa Abubaker</a></h1>
  <div class="topnav">
      <a href="about.html">about.</a>
      <a href="graphics.html">graphics.</a>
