--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <head>
     <meta charset = 'utf-8'>
-    <title> Writing + Code. | Mustafa Abubaker </title>
+    <title> Mustafa Abubaker, Writer </title>
     <link rel = "stylesheet" href = "portfolio.css">
     <link rel="shortcut icon" type="image/x-icon" href="logo.png"/>
  </head>
  <h1> <a href = "index.html">Mustafa Abubaker</a></h1>
  <div class="topnav">
-     <a href="about.html">about.</a>
-     <a href="graphics.html">graphics.</a>
-     <a href="index.html">design + tech.</a>
+     <a href="about.html">About.</a>
+     <a href="graphics.html">Contact.</a>
+     <a href="index.html">Writing.</a>
 </div>
 <div class = "intro">
-     <h2> Lorem Ipsum </h2>
+     <h2> Mustafa Abubaker's Professional Portfolio </h2>
 </div>
 .topnav a {
  color: black;
@@ -22,7 +22,7 @@
  font-size: 18px;
  font-family: "Avenir";   
 }
-<h3> Design + Tech. Selected Work ↓ </h3>
+<h3> Selected Writing ↓ </h3>
 <div class = "gallery">
     <div class = "gallery-item">
     <a href="hexed.html" target="_top"> 
